# kinora

./: .beans.yml  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  flake.nix
.beads/: config.yaml  metadata.json
.beans/: kinora-09ze--second-language-target-ts-or-python-to-validate-th.md  kinora-0caz--kinora-repack-commit-clone-to-temp-atomic-swap.md  kinora-0sgr--record-head-ts-on-rootentry-so-gc-is-independent-o.md  kinora-19iq--warn-when-working-tree-has-uncommitted-kino-state.md  kinora-1lp7--root-gc-policy-as-longshort-term-waterline-specs-d.md  kinora-2t6l--rename-hot-staged-compact-commit.md  kinora-3guj--dogfood-extend-stencil-api-kinograph-to-engineregi.md  kinora-5k13--data-layer-content-store-append-only-ledger.md  kinora-61f9--phase-2b-kinora-compact-command.md  kinora-6395--cli-rename-lineage-wording-for-hot-ledger-writes.md  kinora-6zxd--cli-resolve-command.md  kinora-860i--cli-store-command.md  kinora-8l4w--logging-fastrace-spans-logforth-init-debug-logs-at.md  kinora-9as9--re-versioning-a-committed-kino-forks-across-roots.md  kinora-9nom--cli-render-command-mdbook.md  kinora-artb--public-api-drift-linter-hash-checked-read-only-enf.md  kinora-b1mg--kinora-clone-rebuild-kinora-into-a-fresh-directory.md  kinora-bayr--prune-staged-events-after-archive-for-never-policy.md  kinora-bm7z--stencil-kinora-backed-crate-api-preprocessor-rfc-0.md  kinora-bwo8--resolverrender-should-materialize-kinos-from-prune.md  kinora-c48l--phase-31-config-roots-block-inbox-auto-provision.md  kinora-cium--dogfood-migrate-kudo-rfcs-as-first-kinos.md  kinora-d9gp--hybrid-test-scaffolding-doctests-named-scaffolds-p.md  kinora-egur--live-root-member-rename-not-reflected-in-committed.md  kinora-et1t--self-contained-root-kinograph-commit-metadata-in-h.md  kinora-exay--cli-stencil-sync-paths.md  kinora-f0rg--phase-37-cross-root-integrity-external-refs-preven.md  kinora-guv8--cli-stencil-scaffold-kinograph.md  kinora-hgpl--rendersync-engine-kinograph-bound-idempotent-regio.md  kinora-hxmw--phase-3-multiple-named-roots-assign-event-per-root.md  kinora-j4n4--errors-migrate-library-to-thiserror-cli-to-rootcau.md  kinora-jezf--cli-global-repo-root-c-flag.md  kinora-mjvb--hot-ledger-one-file-per-event-kinorahot.md  kinora-ml4t--render-revisit-branch-labels-under-hot-ledger-layo.md  kinora-mngq--phase-36-gcprune-per-policy-pin-support.md  kinora-n6eg--kinora-store-machine-readable-output-porcelain-jso.md  kinora-ohwb--render-multi-branch-worktree-enumeration.md  kinora-ojc8--repack-drains-already-archived-staged-events.md  kinora-ou1u--reformat-synthesize-nested-composition-entries-fro.md  kinora-q28s--spec-kino-content-model-markdown-fenced-code-split.md  (+15 more)
.claude/: settings.json
.kinora/: HEAD  config.styx
.kinora/ledger/: 7a155b58.jsonl
.kinora/roots/: commits  inbox  rules  specs  tasks
crates/kinora/: Cargo.toml
crates/kinora-cli/: Cargo.toml
crates/kinora-cli/src/: assign.rs  cli.rs  commit.rs  common.rs  compact.rs  main.rs  reformat.rs  render.rs  repack.rs  resolve.rs  store.rs
crates/kinora/src/: assign.rs  cache_path.rs  clone.rs  commit.rs  commit_archive.rs  compact.rs  config.rs  event.rs  hash.rs  init.rs  kino.rs  kinograph.rs  ledger.rs  lib.rs  namespace.rs  paths.rs  reformat.rs  render.rs  repack.rs  resolve.rs  root.rs  store.rs  validate.rs  value.rs
crates/kinora/tests/: architecture.rs
crates/stencil/: Cargo.toml
crates/stencil-cli/: Cargo.toml
crates/stencil-cli/src/: cli.rs  common.rs  main.rs  scaffold.rs  sync.rs
crates/stencil/src/: engine.rs  kinds.rs  lib.rs  region.rs  spec.rs  target.rs
