[workspace]
resolver = "2"
members = [
    "crates/kinora",
    "crates/kinora-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/edger-dev/kinora"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]

# Serialization
facet = "0.46.0"
facet-styx = "3.0.2"
facet-json = "0.46.0"

# Hashing
blake3 = "1.8.4"

# Time
jiff = "0.2.23"

# Git
gix = "0.81.0"

# Markdown
pulldown-cmark = "0.13.3"

# Logging & tracing
log = { version = "0.4.29", features = ["kv"] }
logforth = "0.29.1"
logforth-append-fastrace = "0.3.0"
fastrace = "0.7.17"
rootcause = "0.12.1"

# Errors
thiserror = "2.0.18"

# CLI
figue = "2.0.3"

# Tests
rstest = "0.26.1"
tempfile = "3.27.0"
