[workspace]
resolver = "2"
members = [
    "crates/kinora",
    "crates/kinora-cli",
    "crates/stencil",
    "crates/stencil-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/edger-dev/kinora"

[workspace.lints.rust]
unsafe_code = "forbid"          # rule: (rung 2) unsafe is forbidden outright

# Lint rules live in the kinora `rules` root. Each line below is a rung-1 rule
# projected into clippy config; the `# rule:` tag cites the rule kino it
# enforces. Promote a line to "deny" to graduate it to rung 2. See the "Lint
# Rules" section of CLAUDE.md.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"            # rule: jig::rust::no-unwrap-in-lib
expect_used = "warn"            # rule: jig::rust::no-unwrap-in-lib
todo = "warn"                   # rule: jig::rust::no-todo-committed
unimplemented = "warn"          # rule: jig::rust::no-todo-committed
dbg_macro = "warn"              # rule: jig::rust::no-todo-committed

[workspace.dependencies]

# Serialization
facet = "0.46.0"
facet-styx = "3.0.2"
facet-json = "0.46.0"

# Hashing
blake3 = "1.8.4"

# Time
jiff = "0.2.23"

# Git
gix = "0.81.0"

# Markdown
pulldown-cmark = "0.13.3"

# Logging & tracing
log = { version = "0.4.29", features = ["kv"] }
logforth = "0.29.1"
logforth-append-fastrace = "0.3.0"
fastrace = "0.7.17"
rootcause = "0.12.1"

# Errors
thiserror = "2.0.18"

# CLI
figue = "2.0.3"

# Tests
rstest = "0.26.1"
tempfile = "3.27.0"
