[package]
name = "kinora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "kinora"
path = "src/main.rs"

[dependencies]
kinora = { path = "../kinora" }
facet = { workspace = true }
figue = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
