[package]
name = "kinora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
facet-styx = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
