[package]
name = "stencil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kinora = { path = "../kinora" }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
